--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,8 +3,29 @@
 <head>
   <title>Text Simplifier</title>
   <style>
-    body { width: 200px; }
-    button { width: 100%; }
+    body { 
+      width: 200px; 
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    button { 
+      width: 100%; 
+      padding: 10px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #45a049;
+    }
   </style>
 </head>
 <body>
